# matrix-screen-saver

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL-WINDOWS.md  LICENSE  LICENSE-OFL  README.md  install.sh
.github/workflows/: ci.yml
.superpowers/brainstorm/28052-1778341782/content/: charset.html  visual-style.html
.superpowers/brainstorm/28052-1778341782/state/: server-info
config/: default.toml
crates/matrix-core/: Cargo.toml
crates/matrix-core/src/: atlas.rs  chars.rs  config.rs  lib.rs  renderer.rs  stats.rs
crates/matrix-core/src/shaders/: blur.wgsl  rect.wgsl  scanline.wgsl
crates/matrix-core/tests/: atlas_test.rs  config_test.rs  rain_test.rs
crates/matrix-linux/: Cargo.toml
crates/matrix-linux/src/: font.rs  main.rs  stats.rs  wayland_app.rs
crates/matrix-windows/: Cargo.toml
crates/matrix-windows/src/: config_dialog.rs  font.rs  lib.rs  main.rs  preview.rs  screensaver.rs  stats.rs
docs/: architecture.md  rendering.md
docs/superpowers/plans/: 2026-05-09-matrix-screensaver.md  2026-05-09-perspective-depth.md  2026-05-10-cross-platform.md
docs/superpowers/specs/: 2026-05-09-matrix-screensaver-design.md  2026-05-10-cross-platform-design.md
kde-plugin/matrix-screensaver/: metadata.json
kde-plugin/matrix-screensaver/contents/ui/: main.qml
src/: atlas.rs  config.rs  lib.rs  main.rs  rain.rs  renderer.rs  stats.rs  wayland_app.rs
src/shaders/: blur.wgsl  rain.wgsl  scanline.wgsl
tests/: config_test.rs  rain_test.rs
