[package]
name = "matrix-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "matrix_core"
path = "src/lib.rs"

[dependencies]
wgpu = "0.20"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
pollster = "0.3"
fontdue = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "5"
rand = { version = "0.8", features = ["small_rng"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
