[package]
name = "matrix-windows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matrix-screensaver"
path = "src/main.rs"

[dependencies]
matrix-core = { path = "../matrix-core" }
wgpu = "0.20"
raw-window-handle = "0.6"
pollster = "0.3"
dirs = "5"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
] }
